# OpenCV_Python_Archives

./: .gitignore  .markdownlint.json  Pipfile  README.md  pyproject.toml
.github/workflows/: formatting.yaml
0_await_before_implement/: file_dialog_test.py
a_prelim/0_intro/1_reading_an_image/: entrypoint.py
a_prelim/0_intro/2_rgb_extraction_of_pixel/: entrypoint.py
a_prelim/0_intro/3_region_of_interest_extraction/: entrypoint.py
a_prelim/0_intro/4_image_resizing/: entrypoint.py
a_prelim/0_intro/5_maintained_asp_ratio_image_resize/: entrypoint.py
a_prelim/0_intro/6_image_rotation/: entrypoint.py
a_prelim/0_intro/7_drawing_rectangle_annotation/: entrypoint.py
a_prelim/0_intro/8_displaying_text_annotation/: entrypoint.py
a_prelim/1_image_reading/1_using_numpy/: entrypoint.py
a_prelim/1_intro_basics/10_color_spaces/: entrypoint.py
a_prelim/1_intro_basics/1_reading_an_image/: entrypoint.py
a_prelim/1_intro_basics/2_rgb_extraction_of_pixel/: entrypoint.py
a_prelim/1_intro_basics/3_region_of_interest_extraction/: entrypoint.py
a_prelim/1_intro_basics/5_maintained_asp_ratio_image_resize/: entrypoint.py
a_prelim/1_intro_basics/7_drawing_rectangle_annotation/: entrypoint.py
a_prelim/1_intro_basics/8_displaying_text_annotation/: entrypoint.py
a_prelim/1_intro_basics/9_image_reading_and_display/: entrypoint.py
a_prelim/2_images_vectors/1_arithmetic_addition/: entrypoint.py
a_prelim/2_images_vectors/2_arithmetic_subtraction/: entrypoint.py
b_midterm/1_greyscaling/: entrypoint.py
c_finals/n_assignments/: 2_blood_cell_count.7z
(+15 files in other folders)
